--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 						<div class="slider-wrapper">
 							<div class="slider-track">
 								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
+									<img src="./img/slide/bee.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -321,7 +321,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/myslic.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -345,7 +345,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide3.png" alt="" />
+									<img src="./img/slide/sweet.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -369,7 +369,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide4.png" alt="" />
+									<img src="./img/slide/fortune.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -393,7 +393,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide5.png" alt="" />
+									<img src="./img/slide/fogo.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -417,55 +417,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide6.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-                                <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/royal.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -585,7 +537,7 @@
 						<div class="slider-wrapper">
 							<div class="slider-track">
 								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
+									<img src="./img/slide/panda.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -609,7 +561,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/big.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -633,7 +585,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide3.png" alt="" />
+									<img src="./img/slide/coin.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -657,7 +609,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide4.png" alt="" />
+									<img src="./img/slide/aztec.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -681,7 +633,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide5.png" alt="" />
+									<img src="./img/slide/gates.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -705,55 +657,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide6.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-                                <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/bucks.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -873,7 +777,7 @@
 						<div class="slider-wrapper">
 							<div class="slider-track">
 								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
+									<img src="./img/slide/ben.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -896,7 +800,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/century.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -919,7 +823,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide3.png" alt="" />
+									<img src="./img/slide/prosperous.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -942,7 +846,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide4.png" alt="" />
+									<img src="./img/slide/zorro.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -965,7 +869,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide5.png" alt="" />
+									<img src="./img/slide/moon.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -988,7 +892,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide6.png" alt="" />
+									<img src="./img/slide/fire.png" alt="" />
 									<div class="slider__info two">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1010,53 +914,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
-									<div class="slider__info two">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-                                <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line two">
-											<a class="slider__info-link two" href="#">Review & Where to Play</a>
-										</div>
-									</div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -1154,7 +1012,7 @@
 						<div class="slider-wrapper">
 							<div class="slider-track">
 								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
+									<img src="./img/slide/cricket.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1178,7 +1036,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/aviamasters.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1202,7 +1060,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide3.png" alt="" />
+									<img src="./img/slide/goal.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1226,7 +1084,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide4.png" alt="" />
+									<img src="./img/slide/christmas.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1250,7 +1108,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide5.png" alt="" />
+									<img src="./img/slide/aviatrix.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
@@ -1274,55 +1132,7 @@
 									</div>
 								</div>
                                 <div class="slide">
-									<img src="./img/slide/slide6.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<img src="./img/slide/slide.png" alt="" />
-									<div class="slider__info">
-										<h3 class="slider__info-title">
-											BEE KEEPER
-										</h3>
-										<div class="slider__info-text">
-											<span>RTP:</span>96.5%
-										</div>
-										<div class="slider__info-text">
-											<span>Min Bet:</span>$10
-										</div>
-										<div class="slider__info-text">
-											<span>Provider:</span>Aristocrat
-										</div>
-										<div class="slider__info-text">
-											<span>Volatility:</span>High
-										</div>
-										<div class="slider__info-line">
-											<a class="slider__info-link slider__info-link-demo" href="#">Demo & Review</a>
-											<a class="slider__info-link slider__info-link-play" href="#">Play</a>
-										</div>
-									</div>
-								</div>
-                                <div class="slide">
-									<img src="./img/slide/slide2.png" alt="" />
+									<img src="./img/slide/space.png" alt="" />
 									<div class="slider__info">
 										<h3 class="slider__info-title">
 											BEE KEEPER
