--- a/index.html
+++ b/index.html
@@ -2563,7 +2563,7 @@
 							</p>
 						</div>
 						<div class="footer__list">
-							<h5 class="footer__title">Quick links</h5>
+							<span class="footer__title">Quick links</span>
 							<div class="footer__ul">
 								<div class="footer__li">
 									<a class="footer__link" href="./online-casinos">Where to play</a>
