--- a/index.html
+++ b/index.html
@@ -2097,11 +2097,13 @@
 					</p>
 					<div class="block__provider-focus">
 						<div class="element__provider-focus">
-							<img
-								src="./img/provider/Aristocrat.png"
-								alt="Aristocrat"
-								class="img__provider-focus"
-							/>
+							<picture class="img__provider-focus">
+								<source srcset="./img/provider/Aristocrat-mobile.png" media="(max-width: 550px)">
+								<img
+									src="./img/provider/Aristocrat.png"
+									alt="Aristocrat"
+								/>
+							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">Aristocrat Pokies</h3>
 								<p class="text-element__provider-focus">
@@ -2115,11 +2117,10 @@
 						</div>
 
 						<div class="element__provider-focus">
-							<img
-								src="./img/provider/BGaming.png"
-								alt="BGaming"
-								class="img__provider-focus"
-							/>
+							<picture class="img__provider-focus">
+								<source srcset="./img/provider/BGaming-mobile.png" media="(max-width: 550px)">
+								<img src="./img/provider/BGaming.png" alt="BGaming"/>
+							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">BGaming Pokies</h3>
 								<p class="text-element__provider-focus">
@@ -2133,11 +2134,10 @@
 						</div>
 
 						<div class="element__provider-focus">
-							<img
-								src="./img/provider/Playson.png"
-								alt="Playson"
-								class="img__provider-focus"
-							/>
+							<picture class="img__provider-focus">
+								<source srcset="./img/provider/Playson-mobile.png" media="(max-width: 550px)">
+								<img src="./img/provider/Playson.png" alt="Playson" />
+							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">Playson Pokies</h3>
 								<p class="text-element__provider-focus">
@@ -2150,11 +2150,10 @@
 						</div>
 
 						<div class="element__provider-focus">
-							<img
-								src="./img/provider/NetEnt.png"
-								alt="NetEnt"
-								class="img__provider-focus"
-							/>
+							<picture class="img__provider-focus">
+								<source srcset="./img/provider/NetEnt-mobile.png" media="(max-width: 550px)">
+								<img src="./img/provider/NetEnt.png" alt="NetEnt" />
+							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">NetEnt Pokies</h3>
 								<p class="text-element__provider-focus">
@@ -2167,11 +2166,10 @@
 						</div>
 
 						<div class="element__provider-focus">
-							<img
-								src="./img/provider/Pragmatic.png"
-								alt="Pragmatic"
-								class="img__provider-focus"
-							/>
+							<picture class="img__provider-focus">
+								<source srcset="./img/provider/Pragmatic-mobile.png" media="(max-width: 550px)">
+								<img src="./img/provider/Pragmatic.png" alt="Pragmatic" />
+							</picture>
 							<div class="content__provider-focus">
 								<h3 class="title-element__provider-focus">Pragmatic Pokies</h3>
 								<p class="text-element__provider-focus">
