--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
 							<div class="slider-track">
 								<div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/ben.png" title="Big Ben Aristocrat Slot Review & Where to Play" alt="Big Ben Slot Game Thumbnail" />
+										<img src="./img/slide/ben.webp" title="Big Ben Aristocrat Slot Review & Where to Play" alt="Big Ben Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Big Ben
@@ -824,7 +824,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/century.png" title="Golden Century Aristocrat Slot Review & Where to Play" alt="Golden Century Slot Game Thumbnail" />
+										<img src="./img/slide/century.webp" title="Golden Century Aristocrat Slot Review & Where to Play" alt="Golden Century Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Golden Century
@@ -849,7 +849,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/prosperous.png" title="Happy and Prosperous Aristocrat Slot Review & Where to Play" alt="Happy and Prosperous Slot Game Thumbnail" />
+										<img src="./img/slide/prosperous.webp" title="Happy and Prosperous Aristocrat Slot Review & Where to Play" alt="Happy and Prosperous Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Happy and Prosperous
@@ -874,7 +874,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/zorro.png" title="Zorro Aristocrat Slot Review & Where to Play" alt="Zorro Slot Game Thumbnail" />
+										<img src="./img/slide/zorro.webp" title="Zorro Aristocrat Slot Review & Where to Play" alt="Zorro Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Zorro
@@ -899,7 +899,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/moon.png" title="Autumn Moon Aristocrat Slot Review & Where to Play" alt="Autumn Moon Slot Game Thumbnail" />
+										<img src="./img/slide/moon.webp" title="Autumn Moon Aristocrat Slot Review & Where to Play" alt="Autumn Moon Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Autumn Moon
@@ -924,7 +924,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/fire.png" title="Tiki Fire Aristocrat Slot Review & Where to Play" alt="Tiki Fire Slot Game Thumbnail" />
+										<img src="./img/slide/fire.webp" title="Tiki Fire Aristocrat Slot Review & Where to Play" alt="Tiki Fire Slot Game Thumbnail" />
 										<div class="slider__info two">
 											<h3 class="slider__info-title">
 												Tiki Fire
@@ -1045,7 +1045,7 @@
 							<div class="slider-track">
 								<div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/cricket.png" title="Hot Cricket Free Demo, Review & Where to Play" alt="Hot Cricket Slot Game Thumbnail" />
+										<img src="./img/slide/cricket.webp" title="Hot Cricket Free Demo, Review & Where to Play" alt="Hot Cricket Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Hot Cricket
@@ -1071,7 +1071,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/aviamasters.png" title="Avia Masters Free Demo, Review & Where to Play" alt="Avia Masters Slot Game Thumbnail" />
+										<img src="./img/slide/aviamasters.webp" title="Avia Masters Free Demo, Review & Where to Play" alt="Avia Masters Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Avia Masters
@@ -1097,7 +1097,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/goal.png" title="Goal Crash Free Demo, Review & Where to Play" alt="Goal Crash Slot Game Thumbnail" />
+										<img src="./img/slide/goal.webp" title="Goal Crash Free Demo, Review & Where to Play" alt="Goal Crash Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Goal Crash
@@ -1123,7 +1123,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/christmas.png" title="Christmas Crash Free Demo, Review & Where to Play" alt="Christmas Crash Slot Game Thumbnail" />
+										<img src="./img/slide/christmas.webp" title="Christmas Crash Free Demo, Review & Where to Play" alt="Christmas Crash Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Christmas Crash
@@ -1149,7 +1149,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/aviatrix.png" title="Aviatrix Free Demo, Review & Where to Play" alt="Aviatrix Slot Game Thumbnail" />
+										<img src="./img/slide/aviatrix.webp" title="Aviatrix Free Demo, Review & Where to Play" alt="Aviatrix Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Aviatrix
@@ -1175,7 +1175,7 @@
 								</div>
                                 <div class="slide">
 									<div class="slider__contener">
-										<img src="./img/slide/space.png" title="Space XY Free Demo, Review & Where to Play" alt="Space XY Slot Game Thumbnail" />
+										<img src="./img/slide/space.webp" title="Space XY Free Demo, Review & Where to Play" alt="Space XY Slot Game Thumbnail" />
 										<div class="slider__info">
 											<h3 class="slider__info-title">
 												Space XY
