--- a/index.html
+++ b/index.html
@@ -669,8 +669,9 @@
 											<div class="slider__info-text">
 												<span>Volatility:</span>High
 											</div>
-											<div class="slider__info-line two">
-												<a class="slider__info-link two" href="./free-pokies/pokies-by-provider/pragmatic-play/gates-of-olympus">Review & Where to Play</a>
+											<div class="slider__info-line">
+												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/pragmatic-play/gates-of-olympus">Review & Where to Play</a>
+												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
 											</div>
 										</div>
 									</div>
