--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 												<span>Volatility:</span>High
 											</div>
 											<div class="slider__info-line">
-												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/pragmatic-play/gates-of-olympus">Review & Where to Play</a>
+												<a class="slider__info-link slider__info-link-demo" href="./free-pokies/pokies-by-provider/pragmatic-play/gates-of-olympus">Demo & Review</a>
 												<a class="slider__info-link slider__info-link-play" href="#">Play</a>
 											</div>
 										</div>
