--- a/online-casinos.html
+++ b/online-casinos.html
@@ -159,7 +159,24 @@
 		</header>
         <section class="up-section">
             <div class="container">
-                <div class="up-section__wrappart"></div>
+                <div class="up-section__wrapper">
+                    <div class="up-section__block">
+                        <div class="up-section__crochka">
+                            <a href="./">Home</a>
+                            <span> > </span>
+                            <a href="./online-casinos.html">Online Casinos</a>
+                        </div>
+                        <h2 class="up-section__title">
+                            Best Online casinos Australia
+                        </h2>
+                        <p class="up-section__text">
+                            The phrase best online casinos in Australia is common among
+                            players searching for safe, valuable sites. Our selection
+                            criteria focus on trust and player benefit rather than
+                            marketing.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 		<footer class="footer">
