--- a/online-casinos.html
+++ b/online-casinos.html
@@ -430,11 +430,15 @@
                                                         c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                                                         fill="#10324C9E" clip-path="url(#grayMask)"/>
                                             </svg>
-                                            <span>5/5</span>
+                                            <div class="best-casinos__reting-num">
+                                                <span class="rating__current">5</span>
+                                                <span class="rating__divider">/</span>
+                                                <span class="rating__total">5</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="best-casinos__text">
+                                <div class="best-casinos__text-item">
                                     <p>Welcome bonus: 600% up to 4800$ + 255 Free spins</p>
                                 </div>
                                 <div class="best-casinos__links">
