--- a/index.html
+++ b/index.html
@@ -2483,22 +2483,22 @@
 							<span class="footer__title">Quick links</span>
 							<div class="footer__ul">
 								<div class="footer__li">
-									<a class="footer__link" href="./online-casinos">Where to play</a>
+									<a class="footer__link" href="./online-casinos.html">Where to play</a>
 								</div>
 								<div class="footer__li">
-									<a class="footer__link" href="./contact">Contact</a>
+									<a class="footer__link" href="./contact.html">Contact</a>
 								</div>
 								<div class="footer__li">
-									<a class="footer__link" href="./responsible-gambling">Responsible Gambling</a>
+									<a class="footer__link" href="./responsible-gambling.html">Responsible Gambling</a>
 								</div>
 								<div class="footer__li">
-									<a class="footer__link" href="./disclaimer">Disclaimer</a>
+									<a class="footer__link" href="./disclaimer.html">Disclaimer</a>
 								</div>
 								<div class="footer__li">
-									<a class="footer__link" href="./privacy-policy">Privacy Policy</a>
+									<a class="footer__link" href="./privacy-policy.html">Privacy Policy</a>
 								</div>
 								<div class="footer__li">
-									<a class="footer__link" href="./terms-conditions">Terms & Conditions</a>
+									<a class="footer__link" href="./terms-conditions.html">Terms & Conditions</a>
 								</div>
 							</div>
 						</div>
