--- a/online-casinos.html
+++ b/online-casinos.html
@@ -290,7 +290,8 @@
                                     Best live Casinos
                                 </span>
                             </button>
-                            <button class="best-casinos__btn" data-filter="popular">
+							<div class="best-casinos__btn best-casinos__btn-best" data-filter="popular">
+                            <button class="best-casinos__btn-content" data-filter="popular">
                                 <svg width="50" height="51" viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M50 25.9832V45.8623C50 48.2897 48.0323 50.2494 45.6129 50.2494L4.3871 50.2413C1.96774 50.2413 0 48.2736 0 45.8542V25.9752C0 23.5478 1.96774 21.5881 4.3871 21.5881L45.6048 21.5961C48.0323 21.5961 50 23.5639 50 25.9832Z" fill="#95B8DD"/>
                                     <path d="M48.0967 43.9106C47.6612 43.9106 47.3145 43.5639 47.3145 43.1284V37.2574C47.3145 36.83 47.6612 36.4752 48.0967 36.4752C48.5322 36.4752 48.879 36.8219 48.879 37.2574V43.1284C48.879 43.5639 48.5322 43.9106 48.0967 43.9106Z" fill="#6A81B8"/>
@@ -307,6 +308,21 @@
                                     Payment Methods 
                                 </span>
                             </button>
+							<div class="best-casinos__links-payment">
+								<button class="best-casinos__link-payment">
+									PayId
+								</button>
+								<button class="best-casinos__link-payment">
+									Credit cards
+								</button>
+								<button class="best-casinos__link-payment">
+									Crypto
+								</button>
+								<button class="best-casinos__link-payment">
+									Neosurf
+								</button>
+								</div>
+							</div>
                         </div>
                         <div class="best-casinos__items">
                             <div class="best-casinos__item">
